syntax = "proto3";

option csharp_namespace = "OrganizationService.Contracts";

package organization;

import "google/protobuf/empty.proto";
import "organization-types.proto";

service OrganizationService {
  rpc Create (CreateOrganizationRequest) returns (types.OrganizationDto);
  rpc Update (UpdateOrganizationRequest) returns (types.OrganizationDto);
  rpc GetById (GetOrganizationByIdRequest) returns (types.OrganizationDto);
  rpc GetBySlug (GetOrganizationBySlugRequest) returns (types.OrganizationDto);
  rpc GetMany (GetManyOrganizationsRequest) returns (GetManyOrganizationsResponse);
  rpc Delete (DeleteOrganizationRequest) returns (google.protobuf.Empty);
  rpc DeleteMany (DeleteManyOrganizationsRequest) returns (google.protobuf.Empty);
}

message CreateOrganizationRequest {
  string organization_name = 2;
}

message GetOrganizationByIdRequest {
  string organization_id = 1;
}

message GetOrganizationBySlugRequest {
  string organization_slug = 1;
}

message GetManyOrganizationsRequest {
  repeated string organization_ids = 1;
}

message GetManyOrganizationsResponse {
  repeated types.OrganizationDto organizations = 1;
}

message UpdateOrganizationRequest {
  string organization_id = 1;
  string organization_name = 2;
}

message DeleteOrganizationRequest {
  string organization_id = 1;
}

message DeleteManyOrganizationsRequest {
  repeated string organization_ids = 1;
}